--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-Maxwell Gauss will be in - soon...
+<!doctype html>
+<html lang="en" class="no-js">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>djmaxwellgauss</title>
+    <meta name="description" content="DESCRIPTION___">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="_style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="_script.js"></script>
+</head>
+<body>
+	<div class="headline">
+		<div>
+			<a href="/" id="logo">HTML5 Templates</a>
+			<div class="description">
+				<h1>"Hello World" Web Page With HTML Boilerplate</h1>
+				<p>Download this package to kickstart any web project. It's using normalize.css reset, includes jQuery and Modernizr, analytics, icons and more.<br />It saves time and assures that your project will be up to date using the latest trends and requirements.
+				</p>
+			</div>
+			<div id="devices">
+				<a id="desktop" class="active" title="Desktop view"> </a>
+				<a id="tablet" title="Tablet view"> </a>
+				<a id="tabletl" title="Tablet landscape view"> </a>
+				<a id="mobile" title="Mobile view"> </a>
+				<a id="mobilel" title="Mobile landscape view"> </a>
+			</div>
+			<a class="download" title="Zip package" href="https://html5-templates.com/download/html5-boilerplate.zip">Download</a>
+			<a class="closeheader" title="Hide header">&#10148;</a>
+			<div class="clearboth">
+			</div>
+		</div>
+	</div>
+	<div id="mainWrapper">
+		<div id="device">	
+			<div id="wrapIframe">
+				<iframe id="demoFrame" src="https://html5-templates.com/demo/html5-boilerplate/">Iframes not supported</iframe>
+			</div>
+		</div>
+	</div>
+	<div id="footerke">
+		<span>&copy; This template can be downloaded and edited for free as long as you're linking back to html5-templates.com</span>
+		<span class="mobileOnly">&copy; HTML5-Templates.com</span>
+	</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XX82QD2DG8"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-XX82QD2DG8');</script>
+</body>
+</html>
