--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Own CSS-selectors start from here
     <script src="_script.js"></script>
 </head>
 <body>
-<header>djmaxwellgauss</header>
+<header>djmaxwellgauss.github.io</header>
 <nav></nav>
 <main>
 <div>djmaxwellgauss will be in - soon...</div>
