--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Own CSS-selectors start from here
 <div>djmaxwellgauss will be in - soon...</div>
 	
 </main>
-<footer></footer>	
+<footer>djmaxwellgaus.github.io | <script>document.write(new Date().getFullYear())</script></footer>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XX82QD2DG8"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-XX82QD2DG8');</script>
 </body>
 </html>
