--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Own CSS-selectors start from here
 <nav></nav>
 <main>
 <div>djmaxwellgauss will be in - soon...</div>
-	
+<div class="push"></div>
 </main>
 <footer>djmaxwellgaus.github.io | <script>document.write(new Date().getFullYear())</script></footer>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XX82QD2DG8"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-XX82QD2DG8');</script>
