--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@ Own CSS-selectors start from here
 <main>
 <header>djmaxwellgauss.github.io</header>
 <nav></nav>
-
+<section>
 <div>djmaxwellgauss will be in - soon...</div>
+</section>
 <div class="push"></div>
 </main>
 <footer>djmaxwellgaus.github.io | &copy; <script>document.write(new Date().getFullYear())</script></footer>
