--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Own CSS-selectors start from here
   body,main,header,nav,section,article,footer,.push{width:100%;max-width:100%}
   main{width:90%;margin:0 auto;min-height:100%;height:auto !important;height:100%}
   body{font:16px 'Open Sans',Arial,Sans-Serif,Serif}
-  header{margin-bottom:15px}
+  header{margin-bottom:15px; font-size:2em}
   footer,.push{height:30px}
   footer{text-align:center;line-height:30px;font-size:12px}
   footer section img#splash{border:solid 1px #CCC}
@@ -45,7 +45,7 @@ Own CSS-selectors start from here
 </head>
 <body>
 <main>
-<header>djmaxwellgauss.github.io</header>
+<header><a href="/.">djmaxwellgauss</a><</header>
 <nav></nav>
 <section>
 <div>djmaxwellgauss will be in - soon...</div>
