--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@ Own CSS-selectors start from here
    header{margin-bottom:15px} 
  }
  </style>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="_script.js"></script>
+
 </head>
 <body>
 <main>
-<header><a href="/.">djmaxwellgauss</a><</header>
+<header><a href="/.">djmaxwellgauss</a></header>
 <nav></nav>
 <section>
 <div>djmaxwellgauss will be in - soon...</div>
