--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Own CSS-selectors start from here
  *{margin:0}
   html,body{height:100%}
   body,main,header,nav,section,article,footer,.push{width:100%;max-width:100%}
-  main{width:90%;margin:0 auto;min-height:100%;height:auto !important;height:100%}
+  main{width:90%;margin:0 auto 30px auto ;min-height:100%;height:auto !important;height:100%}
   body{font:16px 'Open Sans',Arial,Sans-Serif,Serif}
   header{margin-bottom:15px; font-size:2em}
   footer,.push{height:30px}
@@ -61,7 +61,6 @@ Own CSS-selectors start from here
   timeout: 2000 // Set the timeout to two seconds
 };</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XX82QD2DG8"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-XX82QD2DG8');</script>
 </body>
 </html>
