--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@ Own CSS-selectors start from here
 </head>
 <body>
 <main>
-<header><a href="/.">djmaxwellgauss</a></header>
+<header><a href="/.">DJ Maxwell Gauss</a></header>
 <nav></nav>
 <section>
-<div>djmaxwellgauss will be in - soon...</div>
+<div>DJ Maxwell Gauss will be in - soon...</div>
 </section>
 <div class="push"></div>
 </main>
