--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@ Own CSS-selectors start from here
 */
  *{margin:0}
   html,body{height:100%}
-  body,main,header,nav,section,article,footer,.push{width:100%;max-width:100%}
+  body,main,header,nav,section,article,footer,iframe.player,.push{width:100%;max-width:100%}
   main{width:90%;margin:0 auto -30px auto ;min-height:100%;height:auto !important;height:100%}
   body{font:16px 'Open Sans',Arial,Sans-Serif,Serif}
   header{margin-bottom:15px; font-size:2em}
-  footer,.push{height:30px}
+  footer{height:30px}
+  iframe.player,.push{height:60px}
   footer{text-align:center;line-height:30px;font-size:12px}
   footer section img#splash{border:solid 1px #CCC}
   img,video{max-width:100%;height:auto;border:0}
@@ -50,7 +51,8 @@ Own CSS-selectors start from here
 <section>
 <div>DJ Maxwell Gauss will be in - soon...</div>
 </section>
-<div class="push"></div>
+<div class="push"><iframe class="player" loading="lazy" width="100%" height="60" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Fdee3%2Fdee3-presents-maxwell-gauss%2F" frameborder="0" ></iframe>
+</div>
 </main>
 <footer>djmaxwellgaus.github.io | &copy; <script>document.write(new Date().getFullYear())</script></footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js" integrity="sha512-v/wOVTkoU7mXEJC3hXnw9AA6v32qzpknvuUF6J2Lbkasxaxn2nYcl+HGB7fr/kChGfCqubVr1n2sq1UFu3Gh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
