--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Own CSS-selectors start from here
   body{font:16px 'Open Sans',Arial,Sans-Serif,Serif}
   header{margin-bottom:15px; font-size:2em}
   footer{height:30px}
-  .player,.push{height:60px}
+  .player,.push{height:60px;margin-bottom:0}
   footer{text-align:center;line-height:30px;font-size:12px}
   footer section img#splash{border:solid 1px #CCC}
   img,video{max-width:100%;height:auto;border:0}
