--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Own CSS-selectors start from here
 <div class="push"><iframe class="player" loading="lazy" width="100%" height="60" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&feed=%2Fdee3%2Fdee3-presents-maxwell-gauss%2F" frameborder="0" ></iframe>
 </div>
 </main>
-<footer>DJ Maxwell Gaus | &copy; <script>document.write(new Date().getFullYear())</script></footer>
+<footer>DJ Maxwell Gauss | &copy; <script>document.write(new Date().getFullYear())</script></footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js" integrity="sha512-v/wOVTkoU7mXEJC3hXnw9AA6v32qzpknvuUF6J2Lbkasxaxn2nYcl+HGB7fr/kChGfCqubVr1n2sq1UFu3Gh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>WebFontConfig = {
   google: {
