--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Own CSS-selectors start from here
   header{margin-bottom:15px; font-size:2em}
   footer{height:30px}
   .player,.push{height:60px}
-  .push{position:absoulute;bottom:30px}
+  .push{position:absoulute;fixed:30px}
   footer{text-align:center;line-height:30px;font-size:12px}
   footer section img#splash{border:solid 1px #CCC}
   img,video{max-width:100%;height:auto;border:0}
