--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@ Own CSS-selectors start from here
   body{font:16px 'Open Sans',Arial,Sans-Serif,Serif}
   header{margin-bottom:15px; font-size:2em}
   footer{height:90px}
-  footer p{padding:0}
-  .player,.push{height:60px}
+  footer p{margin:0;padding:0}
+  .player,.push{height:90px}
   footer{text-align:center;line-height:30px;font-size:12px}
   footer section img#splash{border:solid 1px #CCC}
   img,video{max-width:100%;height:auto;border:0}
   @media(max-width:915px){
-   main{width:960px;max-width:100%;margin:0 auto -30px auto}
+   main{width:960px;max-width:100%;margin:0 auto -60px auto}
    header{margin-bottom:15px} 
  }
  </style>
