--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ Own CSS-selectors start from here
   header{margin-bottom:15px; font-size:2em}
   footer,.player,.push{height:90px}
   footer p{margin:0;padding:0}
-  footer{text-align:center;line-height:30px;font-size:12px}
-  footer section img#splash{border:solid 1px #CCC}
+  footer{text-align:center;font-size:12px}
+  footer section img#splash{border-top:solid 1px #CCC}
   img,video{max-width:100%;height:auto;border:0}
   @media(max-width:915px){
    main{width:960px;max-width:100%;margin:0 auto -90px auto}
