--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Own CSS-selectors start from here
   main{width:90%;margin:0 auto -90px auto ;min-height:100%;height:auto !important;height:100%}
   body{font:16px 'Open Sans',Arial,Sans-Serif,Serif}
   header{margin-bottom:15px; font-size:2em}
-  footer,.player,.push{height:90px}
+  footer,.push{height:90px}
   footer p{margin:0;padding:0}
   footer{text-align:center;font-size:12px}
   footer section img#splash{border-top:solid 1px #CCC}
