--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>djmaxwellgauss</title>
     <meta name="description" content="DESCRIPTION___">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet" rel="preload" as="style">
-    <link rel="stylesheet" href="_style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet" rel="preload" as="style">
 <style>
  /**
  * Fix
@@ -53,7 +52,7 @@ Own CSS-selectors start from here
 </section>
 <div class="push"></div>
 </main>
-<footer><iframe class="player" loading="lazy" width="100%" height="60" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&feed=%2Fdee3%2Fdee3-presents-maxwell-gauss%2F" frameborder="0" ></iframe><br>DJ Maxwell Gauss | &copy; <script>document.write(new Date().getFullYear())</script></footer>
+<footer><iframe class="player" loading="lazy" title="Mixcloud_player" width="100%" height="60" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&feed=%2Fdee3%2Fdee3-presents-maxwell-gauss%2F" frameborder="0" ></iframe><br>DJ Maxwell Gauss | &copy; <script>document.write(new Date().getFullYear())</script></footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js" integrity="sha512-v/wOVTkoU7mXEJC3hXnw9AA6v32qzpknvuUF6J2Lbkasxaxn2nYcl+HGB7fr/kChGfCqubVr1n2sq1UFu3Gh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>WebFontConfig={google:{families: ['Open Sans']},timeout: 2000 // Set the timeout to two seconds};</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
