--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Own CSS-selectors start from here
 </main>
 <footer><iframe class="player" loading="lazy" title="Mixcloud_player" width="100%" height="60" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&feed=%2Fdee3%2Fdee3-presents-maxwell-gauss%2F" frameborder="0" ></iframe><br>DJ Maxwell Gauss | &copy; <script>document.write(new Date().getFullYear())</script></footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js" integrity="sha512-v/wOVTkoU7mXEJC3hXnw9AA6v32qzpknvuUF6J2Lbkasxaxn2nYcl+HGB7fr/kChGfCqubVr1n2sq1UFu3Gh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>WebFontConfig={google:{families: ['Open Sans']},timeout: 2000 // Set the timeout to two seconds};</script>
+<script>WebFontConfig={google:{families: ['Open Sans']},timeout: 2000};</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
